<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:gravity="center"
            >
            <EditText
                android:gravity="center"
                android:id="@+id/old_pass"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/btn_round_edge"
                android:hint="@string/old_password"/>

            <EditText
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/change_pass"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/btn_round_edge"
                android:hint="@string/new_password"/>
            <EditText
                android:gravity="center"
                android:id="@+id/change_password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_width="300dp"
                android:ems="10"
                android:layout_height="50dp"
                android:background="@drawable/btn_round_edge"
                android:hint="@string/confirm_password"
                />
            <Button
                android:id="@+id/confirm"
                android:layout_marginTop="20dp"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:fontFamily="fantasy"
                android:background="@drawable/btn_round_edge"
                android:text="@string/confirm"
                />
            <Button
                android:id="@+id/back"
                android:layout_marginTop="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="fantasy"
                android:background="@drawable/btn_round_edge"
                android:text="@string/back"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
